    (Skills) Iron Grip now uses a rank system
    (Skills) Disarm now uses a rank system
    (Skills) Arrow Deflect now uses a rank system
    (Skills) Flux Mining is now a passive effect when you mine ore instead of requiring a special pickaxe
    (Skills) Removed the Flux Mining mcMMO Pickaxe Item
    (Style) Locked skills now are styled differently in the skill command display
    (Style) Added @ symbol styling for hover tooltips to the locale
    (Style) Added the skill names in the skill commands display to the locale so it can now be edited and styled
    (Experience) Renamed Grass to Grass_Block in treasures.yml to allow grass to give items again (update your configs manually or delete to regen)
    (Experience) Wood blocks now give XP and are affected by Tree Feller (6 sided bark blocks)
    (API) Moved XPGainReason from skills to experience package
    (API) Added XpGainSource for tracking sources of XP
    (API) You can now specify XpGainSource when adding xp to players
    (Config) The Extra Stats option for XP bars now overrides the setting for updating XP bars every time XP is gained
    (Config) Added an option for Party XP gains to not update XP bars
    (Config) Added an option for Passive XP gains to not update XP bars (smelting/brewing)
    (Config) Added warnings if mcMMO finds a MaxBonusLevel of 0 for any skill that incorporates RNG
    (Config) Removed config options for Iron Arm
    (Config) Removed the options related to the Flux Mining Item
    (Config) Second Smelt has a max activation chance of 50% instead of 100% (you can update your configs or gen new ones to get this change)

Version 2.1.1
    = Fixed an issue where excavation wasn't using the correct permission node
    = Added protection against AFK fishing
    = Acrobatics now uses much better anti-exploit detection

Version 2.1.0
 + mcMMO now features XP bars! Configurable in experience.yml
 + Locale files now support & codes for colors and formatting!