@@ -398,9 +398,9 @@ Experience:
             Silverfish: 3.0
             Blaze: 3.0
             Magma_Cube: 2.0
-            Ender_Dragon: 0.0
-            Wither: 0.0
-            Witch: 0.0
+            Ender_Dragon: 1.0
+            Wither: 1.0
+            Witch: 1.0
             Iron_Golem: 2.0
             Wither_Skeleton: 4.0
             Endermite: 2.0
@@ -415,7 +415,7 @@ Experience:
             Zombie_Horse: 1.2
             Husk: 3.0
             Evoker: 3.0
-            Polar_Bear: 1.0
+            Polar_Bear: 2.0
             Llama: 1.0
             Vindicator: 3.0
             Stray: 2.0
@@ -435,3 +435,4 @@ Experience:
             Illusioner: 3.0
             Drowned: 1.0
             Dolphin: 1.3
+            Phantom: 4.0
